cn/snowskystudio/newgame/test/error/ConfigurationDoesNotExists.py
from cn.snowskystudio.newgame.test.error.BaseError import BaseError


class ConfigurationDoesNotExists(BaseError):
    TYPE = "ConfigurationDoesNotExists"
